fix: restore SQL harness after values acceleration