@@ -11,14 +11,14 @@ package tech.streamfusion.flink.planner;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Collections;
 import java.util.List;
 import org.apache.flink.configuration.Configuration;
 import org.apache.flink.table.planner.plan.nodes.exec.ExecEdge;
+import org.apache.flink.table.planner.plan.nodes.exec.ExecNode;
 import org.apache.flink.table.planner.plan.nodes.exec.ExecNodeGraph;
 import org.apache.flink.table.planner.plan.nodes.exec.InputProperty;
+import org.apache.flink.table.planner.plan.nodes.exec.stream.StreamExecTableSourceScan;
 import org.apache.flink.table.planner.plan.nodes.exec.stream.StreamExecUnion;
-import org.apache.flink.table.planner.plan.nodes.exec.stream.StreamExecValues;
 import org.apache.flink.table.types.logical.IntType;
 import org.apache.flink.table.types.logical.RowType;
 import org.junit.jupiter.api.Test;
@@ -28,8 +28,8 @@ class StreamFusionExecUnionTest {
     void replacesUnionAllWithDistinctStreamFusionPhysicalNode() {
         Configuration configuration = new Configuration();
         RowType rowType = RowType.of(new IntType(false));
-        StreamExecValues left = values(configuration, rowType, "left");
-        StreamExecValues right = values(configuration, rowType, "right");
+        ExecNode<?> left = source(configuration, rowType, "left");
+        ExecNode<?> right = source(configuration, rowType, "right");
         StreamExecUnion union = new StreamExecUnion(
                 configuration, List.of(InputProperty.DEFAULT, InputProperty.DEFAULT), rowType, "union all");
         union.setInputEdges(List.of(
@@ -45,9 +45,9 @@ class StreamFusionExecUnionTest {
         assertThat(StreamFusionPlanningDiagnostics.explain()).contains("Accelerated: yes");
     }
 
-    private static StreamExecValues values(Configuration configuration, RowType rowType, String description) {
-        StreamExecValues values = new StreamExecValues(configuration, Collections.emptyList(), rowType, description);
-        values.setInputEdges(Collections.emptyList());
-        return values;
+    private static StreamExecTableSourceScan source(Configuration configuration, RowType rowType, String description) {
+        StreamExecTableSourceScan source = new StreamExecTableSourceScan(configuration, null, rowType, description);
+        source.setInputEdges(List.of());
+        return source;
     }
 }
